# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  history.txt  pyproject.toml  records.txt  tasks.py
dokumentaatio/: Alustava_vaatimusmaarittely.md  arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: .coverage  Alustava_vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: tuntikirjanpito.md
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/poetry-testi/src/: index.py
laskarit/viikko2/unicafe/: .coveragerc  (+2 more)
src/: .coverage  Tietoa.py  build.py  database_connection.py  database_init.py  index.py  intakeCounter.py  noName.py  totalCalorieIntake.py
src/data/: database.db  sql_commands.py
src/database/: .coverage  Softfit.db  Softfit_test.db  database.db  database_misc.py  database_tools.py  records.txt  records_test.txt  sql_commands.py
src/entities/: User.py  intakeCounter.py  totalCalorieIntake.py  user.py
src/repositories/: User_repository.py  database_init.py  intake_record_repository.py  user_repository.py
src/services/: calculator_service.py  calorieCalculator.py  entity_service.py  intake_record_service.py  intake_trace_service.py  user_handle_service.py  user_service.py
src/tests/: .coverage  calculator_service_test.py  intake_record_repository_test.py  intake_trace_service_test.py  user_repository_test.py  user_service_test.py
src/ui/: calculator_ui.py  login_ui.py  matplotlib_ui.py  register_ui.py  registration_check_ui.py  user_ui.py
(+10 files in other folders)
