[tool.poetry]
name = "FitApp"
version = "0.1.0"
description = "This apps is for counting different fitness related calculations and tracking weightloss progression."
authors = ["Kozheen Taher Esa"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
tkcalendar = "^1.6.1"
matplotlib = "^3.5.0"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
pytest = "^6.2.5"
pylint = "^2.12.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
