[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["Kozheen Taher Esa"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
